2006-01-1  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Allow SetPATH also, not just NoSetPATH

2006-01-12  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Don't even give 'cleanup --obsoletes' as an
	option. Add PatchFile and PatchFile-MD5 to dumpinfo fields.

2006-01-09  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: pkgversions_from_info_file now takes %options,
	which are passed to ..._from_properties, which now supports
	"no_exlcusions" option.
	* Validation.pm: Allow validation of .info even if not matching
	local Architecture.

2006-01-11 Alexander Hansen:  <alexkhansen@users.sourceforge.net>

	* Bootstrap.pm:  Add 10.4.4 to supported OSes.

2006-01-09  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Fix weaked *Depends syntax check.

2006-01-06  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Check for duplication of package name in a .info
	file (under-varianted packages in variant sets).

2006-01-06  Daniel Macks  <dmacks@netspace.org>

	* Checksum.pm: parse_checksum: Don't spew diagnostics if passed undef.
	* PkgVersion.pm: Don't spew diagnostics if no Source-MD5 field.
	* Services.pm: Add missing import of CLI symbol.

2006-01-03  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Allow NoSetPATH

2006-01-03  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Downgrade .info *Script -v/-x check to "pedantic"

2006-01-03  Daniel Macks  <dmacks@netspace.org>

	* all: updated Copyright notice

2005-12-28  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: Clarify diagnostics for broken-gcc

2005-12-28  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: New PatchFile and PatchFile-MD5 fields. If
	PatchFile field is present: check its checksum and readability,
	store its full path in %{patchfile}, add 'patch' command to apply
	it to the PatchScript %{default_script}, disable the Patch field.
	* Validation.pm: Check a lot of things about PatchFile.

2005-12-27  Daniel Macks  <dmacks@netspace.org>
